<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"
    android:padding="22dp">

    <TextView
        android:id="@+id/confirmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/ink"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/unpair_all" />

    <TextView
        android:id="@+id/confirmSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="@color/muted"
        android:textSize="13sp"
        android:text="@string/unpair_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp">

        <Button
            android:id="@+id/btnCancel"
            style="@style/AppButton.Neutral"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/btnConfirm"
            style="@style/AppButton.Danger"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/unpair_short" />
    </LinearLayout>

</LinearLayout>
